archive/ANTLR/IncrAntlrGen/target/generated-sources/antlr4/InvokeIncrementProcessParser.java
// Generated from InvokeIncrementProcess.g4 by ANTLR 4.7.1

import java.util.HashMap;
import java.util.Map;
import java.util.List;
import java.util.ArrayList;
import org.apache.commons.jxpath.AbstractFactory;
import org.apache.commons.jxpath.JXPathContext;
import org.apache.commons.jxpath.Pointer;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class InvokeIncrementProcessParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, LETTERS=13, NUMBER=14, ALFA=15, INT=16, STRING=17, 
		WS=18;
	public static final int
		RULE_invokeincrementprocess = 0, RULE_v0 = 1, RULE_v = 2, RULE_kvpi = 3, 
		RULE_kvpo = 4, RULE_key = 5, RULE_value = 6, RULE_index = 7, RULE_varname = 8;
	public static final String[] ruleNames = {
		"invokeincrementprocess", "v0", "v", "kvpi", "kvpo", "key", "value", "index", 
		"varname"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'receiveInput'", "'PrepareInvokeIncrement'", "'Invoke'", "'PrepareOutput'", 
		"'replyOutput'", "'('", "','", "')'", "'<'", "'>'", "'['", "']'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, "LETTERS", "NUMBER", "ALFA", "INT", "STRING", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "InvokeIncrementProcess.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	Map<String,Object> varMap = new HashMap();
	Map<String,String> vMap = new HashMap();

	public class InvokeIncrementProcessRequest {
	String input;
	public String getInput() { return input; }
	public void setInput(String s) { input = s; }
	}
	InvokeIncrementProcessRequest invokeIncrementProcessRequest = new InvokeIncrementProcessRequest();

	public class InvokeIncrementProcessResponse {
	String result;
	public String getResult() { return result; }
	public void setResult(String s) { result = s; }
	}
	InvokeIncrementProcessResponse invokeIncrementProcessResponse = new InvokeIncrementProcessResponse();

	public class Incr {
	String i;
	public String getI() { return i; }
	public void setI(String s) { i = s; }
	}
	Incr incr = new Incr();

	public class IncrResponse {
	String incrReturn;
	public String getIncrReturn() { return incrReturn; }
	public void setIncrReturn(String s) { incrReturn = s; }
	}
	IncrResponse incrResponse = new IncrResponse();

	public class InvokeIncrementProcessRequestMessage_ {
	InvokeIncrementProcessRequest payload = new InvokeIncrementProcessRequest();
	public InvokeIncrementProcessRequest getPayload() { return payload; }
	}
	InvokeIncrementProcessRequestMessage_ invokeIncrementProcessRequestMessage_ = new InvokeIncrementProcessRequestMessage_();

	public class InvokeIncrementProcessResponseMessage_ {
	InvokeIncrementProcessResponse payload = new InvokeIncrementProcessResponse();
	public InvokeIncrementProcessResponse getPayload() { return payload; }
	}
	InvokeIncrementProcessResponseMessage_ invokeIncrementProcessResponseMessage_ = new InvokeIncrementProcessResponseMessage_();

	public class IncrResponse_ {
	IncrResponse parameters = new IncrResponse();
	public IncrResponse getParameters() { return parameters; }
	}
	IncrResponse_ incrResponse_ = new IncrResponse_();

	public class IncrRequest_ {
	Incr parameters = new Incr();
	public Incr getParameters() { return parameters; }
	}
	IncrRequest_ incrRequest_ = new IncrRequest_();

	InvokeIncrementProcessRequestMessage_ input = invokeIncrementProcessRequestMessage_;
	InvokeIncrementProcessResponseMessage_ output = invokeIncrementProcessResponseMessage_;
	IncrResponse_ incrementPLResponse = incrResponse_;
	IncrRequest_ incrementPLRequest = incrRequest_;


	public InvokeIncrementProcessParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class InvokeincrementprocessContext extends ParserRuleContext {
		public V0Context v0() {
			return getRuleContext(V0Context.class,0);
		}
		public VContext v() {
			return getRuleContext(VContext.class,0);
		}
		public InvokeincrementprocessContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_invokeincrementprocess; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InvokeIncrementProcessListener ) ((InvokeIncrementProcessListener)listener).enterInvokeincrementprocess(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InvokeIncrementProcessListener ) ((InvokeIncrementProcessListener)listener).exitInvokeincrementprocess(this);
		}
	}

	public final InvokeincrementprocessContext invokeincrementprocess() throws RecognitionException {
		InvokeincrementprocessContext _localctx = new InvokeincrementprocessContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_invokeincrementprocess);
		try {
			enterOuterAlt(_localctx, 1);
			{

			JXPathContext inputCtx = JXPathContext.newContext(input);
			varMap.put("input", inputCtx);
			JXPathContext outputCtx = JXPathContext.newContext(output);
			varMap.put("output", outputCtx);
			JXPathContext incrementPLResponseCtx = JXPathContext.newContext(incrementPLResponse);
			varMap.put("incrementPLResponse", incrementPLResponseCtx);
			JXPathContext incrementPLRequestCtx = JXPathContext.newContext(incrementPLRequest);
			varMap.put("incrementPLRequest", incrementPLRequestCtx);

			setState(19);
			v0();
			setState(20);
			match(T__0);
			setState(21);
			match(T__1);

			incr.i = "impl:i";

			incrementPLRequest.parameters.i = input.payload.input;

			setState(23);
			match(T__2);
			setState(24);
			match(T__3);

			invokeIncrementProcessResponse.result = "tns:result";

			output.payload.result = incrementPLResponse.parameters.incrReturn;

			setState(26);
			match(T__4);
			setState(27);
			v();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class V0Context extends ParserRuleContext {
		public List<KvpiContext> kvpi() {
			return getRuleContexts(KvpiContext.class);
		}
		public KvpiContext kvpi(int i) {
			return getRuleContext(KvpiContext.class,i);
		}
		public V0Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_v0; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InvokeIncrementProcessListener ) ((InvokeIncrementProcessListener)listener).enterV0(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InvokeIncrementProcessListener ) ((InvokeIncrementProcessListener)listener).exitV0(this);
		}
	}

	public final V0Context v0() throws RecognitionException {
		V0Context _localctx = new V0Context(_ctx, getState());
		enterRule(_localctx, 2, RULE_v0);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(29);
			match(T__5);
			setState(30);
			kvpi();
			setState(33); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(31);
				match(T__6);
				setState(32);
				kvpi();
				}
				}
				setState(35); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__6 );
			setState(37);
			match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VContext extends ParserRuleContext {
		public List<KvpoContext> kvpo() {
			return getRuleContexts(KvpoContext.class);
		}
		public KvpoContext kvpo(int i) {
			return getRuleContext(KvpoContext.class,i);
		}
		public VContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_v; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InvokeIncrementProcessListener ) ((InvokeIncrementProcessListener)listener).enterV(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InvokeIncrementProcessListener ) ((InvokeIncrementProcessListener)listener).exitV(this);
		}
	}

	public final VContext v() throws RecognitionException {
		VContext _localctx = new VContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_v);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(39);
			match(T__5);
			setState(40);
			kvpo();
			setState(43); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(41);
				match(T__6);
				setState(42);
				kvpo();
				}
				}
				setState(45); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__6 );
			setState(47);
			match(T__7);

			  if (!Utils.verify(vMap, varMap)) {
			     System.out.println("ERROR: unexpected output");
			  }

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class KvpiContext extends ParserRuleContext {
		public KeyContext key;
		public ValueContext value;
		public KeyContext key() {
			return getRuleContext(KeyContext.class,0);
		}
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public KvpiContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_kvpi; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InvokeIncrementProcessListener ) ((InvokeIncrementProcessListener)listener).enterKvpi(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InvokeIncrementProcessListener ) ((InvokeIncrementProcessListener)listener).exitKvpi(this);
		}
	}

	public final KvpiContext kvpi() throws RecognitionException {
		KvpiContext _localctx = new KvpiContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_kvpi);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			match(T__8);
			setState(51);
			((KvpiContext)_localctx).key = key();
			setState(52);
			match(T__6);
			setState(53);
			((KvpiContext)_localctx).value = value();
			setState(54);
			match(T__9);

			Utils.setVarValue((((KvpiContext)_localctx).key!=null?_input.getText(((KvpiContext)_localctx).key.start,((KvpiContext)_localctx).key.stop):null), Utils.trimQuote((((KvpiContext)_localctx).value!=null?_input.getText(((KvpiContext)_localctx).value.start,((KvpiContext)_localctx).value.stop):null)), varMap);

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class KvpoContext extends ParserRuleContext {
		public KeyContext key;
		public ValueContext value;
		public KeyContext key() {
			return getRuleContext(KeyContext.class,0);
		}
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public KvpoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_kvpo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InvokeIncrementProcessListener ) ((InvokeIncrementProcessListener)listener).enterKvpo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InvokeIncrementProcessListener ) ((InvokeIncrementProcessListener)listener).exitKvpo(this);
		}
	}

	public final KvpoContext kvpo() throws RecognitionException {
		KvpoContext _localctx = new KvpoContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_kvpo);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(57);
			match(T__8);
			setState(58);
			((KvpoContext)_localctx).key = key();
			setState(59);
			match(T__6);
			setState(60);
			((KvpoContext)_localctx).value = value();
			setState(61);
			match(T__9);

			vMap.put((((KvpoContext)_localctx).key!=null?_input.getText(((KvpoContext)_localctx).key.start,((KvpoContext)_localctx).key.stop):null), (((KvpoContext)_localctx).value!=null?_input.getText(((KvpoContext)_localctx).value.start,((KvpoContext)_localctx).value.stop):null));

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class KeyContext extends ParserRuleContext {
		public VarnameContext varname() {
			return getRuleContext(VarnameContext.class,0);
		}
		public KeyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_key; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InvokeIncrementProcessListener ) ((InvokeIncrementProcessListener)listener).enterKey(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InvokeIncrementProcessListener ) ((InvokeIncrementProcessListener)listener).exitKey(this);
		}
	}

	public final KeyContext key() throws RecognitionException {
		KeyContext _localctx = new KeyContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_key);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			varname();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValueContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(InvokeIncrementProcessParser.STRING, 0); }
		public ValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_value; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InvokeIncrementProcessListener ) ((InvokeIncrementProcessListener)listener).enterValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InvokeIncrementProcessListener ) ((InvokeIncrementProcessListener)listener).exitValue(this);
		}
	}

	public final ValueContext value() throws RecognitionException {
		ValueContext _localctx = new ValueContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_value);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IndexContext extends ParserRuleContext {
		public TerminalNode NUMBER() { return getToken(InvokeIncrementProcessParser.NUMBER, 0); }
		public IndexContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_index; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InvokeIncrementProcessListener ) ((InvokeIncrementProcessListener)listener).enterIndex(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InvokeIncrementProcessListener ) ((InvokeIncrementProcessListener)listener).exitIndex(this);
		}
	}

	public final IndexContext index() throws RecognitionException {
		IndexContext _localctx = new IndexContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_index);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			match(T__10);
			setState(69);
			match(NUMBER);
			setState(70);
			match(T__11);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarnameContext extends ParserRuleContext {
		public List<TerminalNode> LETTERS() { return getTokens(InvokeIncrementProcessParser.LETTERS); }
		public TerminalNode LETTERS(int i) {
			return getToken(InvokeIncrementProcessParser.LETTERS, i);
		}
		public List<TerminalNode> ALFA() { return getTokens(InvokeIncrementProcessParser.ALFA); }
		public TerminalNode ALFA(int i) {
			return getToken(InvokeIncrementProcessParser.ALFA, i);
		}
		public List<TerminalNode> NUMBER() { return getTokens(InvokeIncrementProcessParser.NUMBER); }
		public TerminalNode NUMBER(int i) {
			return getToken(InvokeIncrementProcessParser.NUMBER, i);
		}
		public List<IndexContext> index() {
			return getRuleContexts(IndexContext.class);
		}
		public IndexContext index(int i) {
			return getRuleContext(IndexContext.class,i);
		}
		public VarnameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varname; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof InvokeIncrementProcessListener ) ((InvokeIncrementProcessListener)listener).enterVarname(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof InvokeIncrementProcessListener ) ((InvokeIncrementProcessListener)listener).exitVarname(this);
		}
	}

	public final VarnameContext varname() throws RecognitionException {
		VarnameContext _localctx = new VarnameContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_varname);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			_la = _input.LA(1);
			if ( !(_la==LETTERS || _la==ALFA) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(79);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__10) | (1L << LETTERS) | (1L << NUMBER) | (1L << ALFA))) != 0)) {
				{
				setState(77);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case LETTERS:
					{
					setState(73);
					match(LETTERS);
					}
					break;
				case NUMBER:
					{
					setState(74);
					match(NUMBER);
					}
					break;
				case ALFA:
					{
					setState(75);
					match(ALFA);
					}
					break;
				case T__10:
					{
					setState(76);
					index();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(81);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}